Avoid jumping content when navigating.

--- a/src/web/assets/css/_language-picker.sass
+++ b/src/web/assets/css/_language-picker.sass
@@ -4,8 +4,11 @@
 
 .language-picker
   text-align: center
+  position: relative
+  height: 45px
 
 .language-picker__item
+  position: relative
   font-size: 15px
   padding: 9px
   border: 1px solid #e6e6e6
